--- a/lookup/templates/base.html
+++ b/lookup/templates/base.html
@@ -36,12 +36,18 @@
 	    </div>
 	  </div>
 	</nav>
-	<div class="container">
+	<div class="container my-2">
+
 	{% block content %}
 
 	{% endblock %}
-	</div>
 
+	</div>
+	<div class="bg-primary text-white mt-5">
+		<div class="container py-5">
+			<p>Footer</p>
+		</div>
+	</div>	
   </body>
 </html>
 
